<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/colorWindows">

    <com.study.commonlib.ui.view.TopBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tb_title="@string/lock_gesture_setting"/>

    <!-- 显示手势密码 -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/multiCard_height"
        android:layout_marginTop="@dimen/dp_gap"
        android:paddingLeft="@dimen/dp_20"
        android:paddingRight="@dimen/dp_20"
        android:background="@drawable/selector_item_bg">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lock_show_gesture_locus"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/sp_18"
            android:layout_centerVertical="true"/>

        <Switch
            android:id="@+id/switch_show_gesture_locus"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_24"
            android:switchMinWidth="20dp"
            android:layout_marginStart="@dimen/dp_10"
            android:thumb="@drawable/selector_switch_thumb"
            android:track="@drawable/selector_switch_track"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0.5"
            android:background="@color/main_divider"
            android:layout_alignParentBottom="true"
            android:visibility="visible" />

    </RelativeLayout>

    <!-- 修改手势密码 -->
    <com.study.commonlib.ui.view.MultiCard
        android:id="@+id/mc_modify_gesture_pwd"
        android:layout_width="match_parent"
        android:layout_height="@dimen/multiCard_height"
        app:mc_title="@string/lock_modify_gesture_pwd"
        app:mc_hasDivider="true"/>

    <!-- 忘记手势密码 -->
    <com.study.commonlib.ui.view.MultiCard
        android:id="@+id/mc_forget_gesture_pwd"
        android:layout_width="match_parent"
        android:layout_height="@dimen/multiCard_height"
        app:mc_title="@string/lock_forget_gesture_pwd"
        app:mc_hasDivider="false"/>

</LinearLayout>
