<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/colorWindows">

    <com.study.commonlib.ui.view.TopBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tb_title="@string/lock_verification_gesture_pwd"/>

    <TextView
        android:id="@+id/tv_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_95"
        android:text="@string/lock_gesture_input_olo_pwd"
        android:textSize="@dimen/sp_18" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_30"
        android:orientation="vertical">

        <com.study.androidnote.lock.view.custom.LockView
            android:id="@+id/lockView"
            android:layout_width="@dimen/dp_300"
            android:layout_height="@dimen/dp_300" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_verification_login_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_20"
        android:gravity="center"
        android:text="@string/lock_verification_login_pwd"
        android:textColor="@color/lock_cell_default"
        android:textSize="@dimen/sp_18"  />

</LinearLayout>
